Fixed layout issues with Legend.css and Legend.jsx across different screen sizes

--- a/er/src/components/Legend.css
+++ b/er/src/components/Legend.css
@@ -20,7 +20,7 @@
     content: "";
     height: 70px;
     position: absolute;
-    width: 3px;
+    width: 2px;
     background: #EEEFFC;
     display: block;
     top: 0;
@@ -70,6 +70,7 @@
 #legend-content {
     background-color: white;
     height: 100%;
+    max-width: 304px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
